@@ -1,64 +1,0 @@
-<!--outermost page container for all content-->
-<div id="ps-page-container">
-
-<!--inner container for the content-->
-<div id="ps-main">
-{include file="crumbs.html"}
-
-<div id="ps-main-column">
-{include file="manage_menu.html"}
-</div>
-
-<!--content block-->
-<div id="ps-main-content" class="ps-page-{$page}">
-
-<div class="ps-table-frame no-ani">
-	<div class="ps-table-header">
-		<div id="filter" class="filter">
-			<form action="{url _base='aliases_edit.php'}" method="post">
-				<input type="submit" value="<#New Alias#>" class="btn left">
-			</form>
-			<form action="{url}" method="get">
-				<input name="filter" type="text" value="{$filter|escape}" size="20" class="field">
-				<input type="submit" 	value="<#Filter#>" class="btn">
-				<input name="order" 	value="{$order}" type="hidden">
-				<input name="sort" 	value="{$sort}" type="hidden">
-				<input name="start" 	value="0" type="hidden">
-				<input name="limit" 	value="{$limit}" type="hidden">
-			</form>
-		</div>
-		{$pager}
-	</div>
-	<div class="ps-table-inner">
-		<table class='ps-table ps-alias-table'>
-		<tr>
-			<th><p><span class="asc"><#Unique ID#></span></p></th>
-			<th><p><span class="asc"><#Aliases#></span></p></th>
-{*
-			<th><p><abbr title="<#Select All#>"><input id="delete-all" type="checkbox"></abbr></p></th>
-*}
-		</tr>
-{foreach name='alias' from=$aliases item='a'}
-		<tr class="{cycle values=",even"}{if $last_team_id != $a.team_id and $smarty.foreach.alias.index != 0} sep-row-top{/if}">
-			<td class="item">{if $last_team_id != $a.team_id}<a href="{url _base='aliases_edit.php' id=$a.team_id}">{$a.team_id|escape}</a>{else}&nbsp;{/if}</td>
-			<td>{$a.alias|escape}</td>
-{*
-			<td><input name="del[]" value="{$a.id}" type="checkbox"></td>
-*}
-		</tr>
-{assign var='last_team_id' value=$a.team_id}
-{foreachelse}
-		<tr><td colspan="2" class="no-data">
-			<#No Team Aliases#>
-		</td></tr>
-{/foreach}
-		</table>
-	</div>
-</div>
-
-
-</div> {* end ps-main-content *}
-</div> {* end ps-main *}
-
-	<div class="clear"></div>
-</div> {* end ps-page-container *}
