@@ -1,78 +1,0 @@
-<script>
-delete_message = "<#Are you sure you want to delete all aliases for this unique id?#>";
-</script>
-<!--outermost page container for all content-->
-<div id="ps-page-container">
-
-<!--inner container for the content-->
-<div id="ps-main">
-
-{include file="crumbs.html"}
-
-<!--content block-->
-<div id="ps-main-content" class="ps-page-{$page}">
-
-{$message}
-
-<div class="ps-form-container" id="ps-{$page}-form">
-<div class="ps-form">
-<form method="post" action="{url}">
-<fieldset>
-<legend>{if $id}<#Edit#>{else}<#New#>{/if} <#Aliases#></legend>
-{if $errors.fatal}<div class="err fatal"><h4><#Fatal Error#></h4><p>{$errors.fatal}</p></div>{/if}
-{*
-<div class="inline-notes">
-	<h4></h4>
-	<p></p>
-</div>
-*}
-<div{if $errors.team_id} class="err"{/if}>
-	<p class="err" id="err-team_id">{$errors.team_id|escape}</p>
-	<label><#Unique ID#>:</label>
-{if $id}
-	<span class="readonly">{$form.team_id|escape}</span> (<#Read Only#>)
-{else}
-	<input name="team_id" value="{$form.team_id|escape}" type="text" class="field">
-{/if}
-	<p class="small">
-	</p>
-</div>
-
-<div class="inline-notes">
-	<h4>Aliases</h4>
-	<p>
-		Enter aliases for the unique ID, one per line, in the box below. Duplicates will automatically be removed. 
-		<strong>Aliases are case-insensitive.</strong>
-	</p>
-</div>
-
-<div{if $errors.aliases} class="err"{/if}>
-	<p class="err" id="err-aliases">{$errors.aliases|escape}</p>
-	<label><#Aliases#>:</label>
-	<textarea name="aliases" rows="5" class="long">{$form.aliases|escape}</textarea>
-</div>
-
-</fieldset>
-<fieldset>
-<div class="submit">
-	<input name="submit" value="1" type="hidden">
-	<input name="ref" value="{$ref}" type="hidden">
-	<input name="key" value="{$form_key}" type="hidden">
-	<input name="id" value="{$id}" type="hidden">
-	<input class="btn save" type="submit" value="<#Save#>">
-{if $id}
-	<input id="btn-delete" class="btn delete" type="submit" value="<#Delete#>" name="del">
-{/if}
-	<input name="cancel" class="btn cancel" type="submit" value="<#Cancel#>">
-</div>
-</fieldset>
-</form>
-</div>
-</div>
-
-
-</div> {* end ps-main-content *}
-
-</div> {* end ps-main *}
-
-</div> {* end ps-page-container *}
