@@ -13,7 +13,6 @@
 		<dd class="email{if $page == 'email_test'} sel{/if}"><a href="{url _base='email_test.php'}"><#Test Email Notifications#></a></dd>
 	<dt class="folder first"><#Team Management#></dt>
 		<dd class="user-green{if $page == 'teams'} sel{/if}"><a href="{url _base='teams.php'}"><#All Teams#></a></dd>
-		<dd class="alias{if $page == 'aliases'} sel{/if}"><a href="{url _base='aliases.php'}"><#Aliases#></a></dd>
 	<dt class="folder first"><#User Management#></dt>
 		<dd class="user-red{if $page == 'users'} sel{/if}"><a href="{url _base='users.php'}"><#All Users#></a></dd>
 	<dt class="folder first"><#Error Logs#></dt>
