@@ -5,6 +5,7 @@ Version 0.0.2b (in progress)
 * [Changed] Moved team logo to main column on team page.
 * [Fixed] Cleaned up a significant number of html errors and warnings.
 * [Fixed] CSS problem in cookie consent popup.
+* [Removed] Support for team aliases.
 
 Version 0.0.1b (12/07/2022)
 * [Fixed] Corrected an error in the SRAT formula.
